--- a/vechornycy/apps/blog/templates/blog/main_page.html
+++ b/vechornycy/apps/blog/templates/blog/main_page.html
@@ -1,5 +1,12 @@
- <ul>
+
+
+{% if latest_post_list %}
+    <ul>
     {% for post in latest_post_list %}
         <li><a href="/blog/{{ post.id }}/">{{ post.post_body }}</a></li>
     {% endfor %}
- </ul>
+    </ul>
+{% else %}
+    <p>No posts are available.</p>
+{% endif %}
+
