--- a/vechornycy/apps/blog/templates/blog/main_page.html
+++ b/vechornycy/apps/blog/templates/blog/main_page.html
@@ -1,12 +1,14 @@
+{% extends "base.html" %}
 
-
-{% if latest_post_list %}
-    <ul>
-    {% for post in latest_post_list %}
-        <li><a href="/blog/{{ post.id }}/">{{ post.post_body }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No posts are available.</p>
-{% endif %}
+{% block content %}
+	{% if latest_post_list %}
+    	<ul>
+	    {% for post in latest_post_list %}
+	        <li><a href="{% url 'blog:post' post.id %}">{{ post.post_body }}</a></li>
+	    {% endfor %}
+	    </ul>
+	{% else %}
+	    <p>No posts are available.</p>
+	{% endif %}
+{% endblock %}
 
