--- a/vechornycy/apps/events/templates/events/main.html
+++ b/vechornycy/apps/events/templates/events/main.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-	{% if latest_post_list %}
+	{% if latest_event_list %}
     	<ul>
-	    {% for post in latest_post_list %}
-	        <li><a href="{% url 'blog:post' post.id %}">{{ post.post_body }}</a></li>
+	    {% for post in latest_event_list %}
+	        <li><a href="{% url 'event:post' post.id %}">{{ post.title }}</a></li>
 	    {% endfor %}
 	    </ul>
 	{% else %}
