--- a/vechornycy/templates/base.html
+++ b/vechornycy/templates/base.html
@@ -1,20 +1,16 @@
-{% load static %}
 <!doctype html>
 <html lang="en" class="h-100" data-bs-theme="auto">
-  <head><script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1-examples/asse
-ts/js/color-modes.js"></script>
+  <head><script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1-examples/assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contri
-butors">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.115.4">
-    <title>Cover Template · Bootstrap v5.3 !!!</title>
+    <title>Грацівські Вечорниці - Головна</title>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/di
-st/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'base.css' %}">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -36,11 +32,10 @@ st/css/bootstrap.min.css">
         background-color: rgba(0, 0, 0, .1);
         border: solid rgba(0, 0, 0, .15);
         border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(
-0, 0, 0, .15);
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
       }
 
-      .b-example-vr {
+	.b-example-vr {
         flex-shrink: 0;
         width: 1.5rem;
         height: 100vh;
@@ -50,6 +45,7 @@ st/css/bootstrap.min.css">
         vertical-align: -.125em;
         fill: currentColor;
       }
+
       .nav-scroller {
         position: relative;
         z-index: 2;
@@ -67,6 +63,7 @@ st/css/bootstrap.min.css">
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
       }
+
 
       .btn-bd-primary {
         --bd-violet-bg: #712cf9;
@@ -88,10 +85,32 @@ st/css/bootstrap.min.css">
         z-index: 1500;
       }
     </style>
-	<body>
+    <link href="/static/css/cover.css" rel="stylesheet">
+</head>
+<body class="d-flex h-100 text-center text-bg-dark">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">Cover</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Головна</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/blog/">Блог</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/events/">Івенти</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/contactus/">Зв'язатися</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/aboutus/">Про нас</a>
+      </nav>
+    </div>
+  </header>
+	<main class="px-3">
 		<h1>testouch</h1>
 		{% block content %}
 		{% endblock %}
+	</main>
+  <footer class="mt-auto text-white-50">
+    <p>Шукайте нас <a href="https://www.google.com/maps/place/Dizzys+Club-Cafe/@47.0711855,15.4395345,18.68z/data=!4m6!3m5!1s0x476e3582024b0f11:0x3dc63cdffa5b6f0!8m2!3d47.0718807!4d15.4395186!16s%2Fg%2F1tcx0b63?entry=ttu" class="text-white">десь</a>, у Граці, не промайнете :).</p>
+  </footer>
 
+</div>
 	</body>
 </html>
+
