--- a/vechornycy/apps/events/templates/events/post.html
+++ b/vechornycy/apps/events/templates/events/post.html
@@ -1,5 +1,5 @@
 {% load events_extras %}
 
-<h1> {{ post.title }} </h1>
-<p> {{ post.post_body | convert_markdown | safe }} </p>
+<h1> {{ event.title }} </h1>
+<p> {{ event.event_body | convert_markdown | safe }} </p>
 		
