--- a/vechornycy/apps/events/templates/events/main.html
+++ b/vechornycy/apps/events/templates/events/main.html
@@ -1,14 +1,30 @@
 {% extends "base.html" %}
 
+{% load static%}
+{% block menu %}
+<nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link fw-bold py-1 px-0" href="/">Головна</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/blog/">Блог</a>
+        <a class="nav-link fw-bold py-1 px-0 active" href="/events/">Анонси</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/contactus/">Зв'язатися</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/aboutus/">Про нас</a>
+      </nav>
+{% endblock %}
+
+
 {% block content %}
-	{% if latest_event_list %}
-    	<ul>
-	    {% for post in latest_event_list %}
-	        <li><a href="{% url 'event:post' post.id %}">{{ post.title }}</a></li>
-	    {% endfor %}
-	    </ul>
-	{% else %}
-	    <p>No posts are available.</p>
-	{% endif %}
+<div class="container">
+          {% if latest_event_list %}
+                    {% for post in latest_event_list %}
+                    <div class="grid-item">
+                            <img src={{ post.pic }}>
+                        <h2><a href="{% url 'events:post' post.id %}">{{ post.title }}</a></h2>
+                        <p>...</p>
+                     </div>
+                    {% endfor %}
+                {% else %}
+                    <p>No posts are available.</p>
+                {% endif %}
+</div>
 {% endblock %}
 
