--- a/vechornycy/static_files/css/cover.css
+++ b/vechornycy/static_files/css/cover.css
@@ -19,10 +19,11 @@
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  overflow: auto;
 }
 
 .cover-container {
-  max-width: 42em;
+  max-width: 69em;
 }
 
 
