--- a/vechornycy/templates/base.html
+++ b/vechornycy/templates/base.html
@@ -4,14 +4,37 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.115.4">
     <title>Грацівські Вечорниці - Головна</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 
     <style>
+    
+    .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(3, 33%); /* 3 objects side by side */
+            grid-gap: 20px;
+        }
+        .grid-item {	
+            text-align: center;
+            background-color: #333; /* Dark grid background color */
+            padding: 20px;
+            border-radius: 10px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        h2 {
+            margin-top: 10px;
+        }
+        p {
+            margin-top: 10px;
+        }
+    
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -87,29 +110,22 @@
     </style>
     <link href="/static/css/cover.css" rel="stylesheet">
 </head>
-<body class="d-flex h-100 text-center text-bg-dark">
+<body class="d-flex h-100 text-bg-dark">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Cover</h3>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Головна</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/blog/">Блог</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/events/">Івенти</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/contactus/">Зв'язатися</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/aboutus/">Про нас</a>
-      </nav>
+	{% block menu %}
+	{% endblock %}
     </div>
   </header>
 	<main class="px-3">
-		<h1>testouch</h1>
 		{% block content %}
 		{% endblock %}
 	</main>
-  <footer class="mt-auto text-white-50">
+	<footer class="mx-auto mt-auto text-white-50 w-100 text-center">
     <p>Шукайте нас <a href="https://www.google.com/maps/place/Dizzys+Club-Cafe/@47.0711855,15.4395345,18.68z/data=!4m6!3m5!1s0x476e3582024b0f11:0x3dc63cdffa5b6f0!8m2!3d47.0718807!4d15.4395186!16s%2Fg%2F1tcx0b63?entry=ttu" class="text-white">десь</a>, у Граці, не промайнете :).</p>
   </footer>
-
 </div>
 	</body>
 </html>
