--- a/vechornycy/templates/base.html
+++ b/vechornycy/templates/base.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 
     <style>
-    
-    .container {
+    .container-blog-list {
             max-width: 900px;
             margin: 0 auto;
             padding: 20px;
@@ -18,7 +17,7 @@
             grid-template-columns: repeat(3, 33%); /* 3 objects side by side */
             grid-gap: 20px;
         }
-        .grid-item {	
+        .grid-item-blog-list {
             text-align: center;
             background-color: #333; /* Dark grid background color */
             padding: 20px;
