--- a/vechornycy/apps/mainpage/templates/mainpage/index.html
+++ b/vechornycy/apps/mainpage/templates/mainpage/index.html
@@ -100,8 +100,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Головна</a>
         <a class="nav-link fw-bold py-1 px-0" href="/blog/">Блог</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/events/">Івенти</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/contactus/">Зв'язатися</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/events/">Анонси</a>
 	<a class="nav-link fw-bold py-1 px-0" href="/aboutus/">Про нас</a>
       </nav>
     </div>
@@ -111,7 +110,7 @@
     <h1>Грацівські вечорниці</h1>
     <p class="lead">Вечорниці - це щось для кожного. Вечорниці - це про кожного. Зайди до нас на вогник!</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+      <a href="/events/" class="btn btn-lg btn-light fw-bold border-white bg-white">Заглянути на вогник</a>
     </p>
   </main>
 
